--- a/index.html
+++ b/index.html
@@ -2,6 +2,42 @@
 <html lang="en">
   <head>
     <title>Doctor Appointment Booking</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Book appointments with doctors, view availability, and manage your health schedule."
+    />
+    <meta name="author" content="Mustafa Saied" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <link rel="icon" href="/favicon.ico" />
+
+    <meta property="og:title" content="Doctor Appointment Booking" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://doctor-appointment-booking.com" />
+    <meta
+      property="og:image"
+      content="https://doctor-appointment-booking.com/images/og-image.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Easily book appointments with healthcare professionals and manage your medical schedule."
+    />
+    <meta property="og:site_name" content="Doctor Appointment Booking" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Doctor Appointment Booking" />
+    <meta
+      name="twitter:description"
+      content="Easily book appointments with healthcare professionals and manage your medical schedule."
+    />
+    <meta
+      name="twitter:image"
+      content="https://doctor-appointment-booking.com/images/twitter-card.jpg"
+    />
+
+    <link rel="canonical" href="https://doctor-appointment-booking.com" />
   </head>
 
   <body>
